--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: tenplus
 
 # Short bio or description (displayed in the header)
-description: A blog about tensors, language, and computers
+description: A blog about language and computers
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars2.githubusercontent.com/u/6328181
